# MyOwnOS

./: CMakeLists.txt  README.md
include/common/: color.h  coordinates.h  factory.h  font.h  graphicscontext.h  inputstream.h  map.h  outputstream.h  pair.h  rectangle.h  string.h  time.h  types.h  vector.h
